# DnD-dice-roller-discord-bot

./: README.md  pyproject.toml  requirements.txt
dRoll/: __main__.py
dRoll/models/: dice.py
dRoll/plugins/: roll.py  roll_handwritten.py  roll_with_params.py
dRoll/utils/: parse_dice.py
static/: app-logo.jfif
